--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ timezone: Asia/Kathmandu
 # --------------------------
 title: Rupesh Bhandari                       # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Learning    # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
