--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ avatar: https://avatars.githubusercontent.com/u/82154284?s=400&u=5568c80172378ab
 toc: true
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
-  shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  comments: true  # boolean type, the global switch for posts comments.
+  shortname: 'rpshbhandari-github-io'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
 
