updated config.yml for new url

--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://rpshbhandari.github.io'
+url: 'https://rupeshbhandari.github.io'
 
 github:
-  username: rpshbhandari            # change to your github username
+  username: RupeshBhandari            # change to your github username
 
 twitter:
   username: rupesh_bhandari            # change to your twitter username
