--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -37,6 +37,10 @@ jobs:
           JEKYLL_ENV: production
         run: |
           bundle exec jekyll b -d "_site$BASE_URL"
+          
+      - name: Test Site
+        run: |
+          bash tools/test.sh
 
 
       - name: Deploy
