--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,7 @@ defaults:
       layout: post
       comments: true    # Enable comments in posts.
       toc: true         # Display TOC column in posts.
+      permalink: /posts/:title/
   -
     scope:
       path: _drafts
@@ -151,9 +152,6 @@ compress_html:
     envs: [development]
 
 exclude:
-  - vendor
-  - Gemfile
-  - Gemfile.lock
   - '*.gem'
   - '*.gemspec'
   - tools
@@ -162,8 +160,7 @@ exclude:
   - LICENSE
   - gulpfile.js
   - node_modules
-  - package.json
-  - package-lock.json
+  - '*.json'
 
 jekyll-archives:
   enabled: [categories, tags]
